changed docker path in ci/cd file

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -65,4 +65,4 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE_DEVELOP }}
           script: |
             docker pull ${{ secrets.CR_REGISTRY }}/${{ secrets.CR_NAME }}:develop
-            docker-compose -f ~/space21/docker-compose-dev.yml --env-file ~/space21/.env_dev up -d ${{ secrets.CR_NAME }}
+            docker-compose -f ~/space21/staging/staging-deployment/docker-compose.yml --env-file ~/space21/staging/.env up -d ${{ secrets.CR_NAME }}
