--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,7 +20,7 @@ jobs:
           go-version: 1.24
 
       - name: Run tests
-        run: go test -coverprofile=coverage.out -tags=test -v ./internal/rpc/...
+        run: go test -coverprofile=coverage.out -tags=test -v ./internal/service/...
 
       - name: Check coverage
         run: |
